Adding user entity, user repo, registration controller.